[tool.poetry]
name = "ready"
version = "0.1.0"
description = ""
authors = ["xiulunwang696 <xiulunwang696@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
llmspec = "^0.3.18"
falcon = "^3.1.3"
uvicorn = "^0.30.1"
mosec = "^0.8.5"
huggingface-hub = "^0.23.3"
transformers = "^4.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
